links Update index.html

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <img src="webpic\dp_2.jpg" alt="" width="150px">
                 <h1>S Yadav</h1>
                 <div class="social-icon">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/sanjayjadav.sanjayjadav.509"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/krishnavanshi__sanjay__/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/sanjay-kumar-yadav-4a3a31261/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
          </div>
             <div class="nav-toggler">
@@ -44,7 +44,7 @@
                 <li> <a href="#contact" ><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
 
-            <div class="nav foter">
+            <div class=" foter">
                 <p> Copyright 2023 by S Yadav | <br>All Rights Reserved</p>
             </div>
         <!--==Aside End==-->
@@ -171,7 +171,7 @@
                                             <h3 class="timeline-date">
                                                 <i class="fa fa-calendar"></i>2016 -2018
                                             </h3>
-                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                            <h4 class="timeline-title">Board of 9th-10th </h4>
                                             <p class="timeline-text">I have successfully completed my master’s in computer science course,
                                                  where I learned the latest technologies and techniques in the field. I gained valuable skills
                                                   and knowledge that will help me advance my career and pursue my interests</p>
@@ -179,9 +179,9 @@
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
-                                                <i class="fa fa-calendar"></i>2016 -2018
+                                                <i class="fa fa-calendar"></i>2019 -2021
                                             </h3>
-                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                            <h4 class="timeline-title">Board of 11th-12th </h4>
                                             <p class="timeline-text">I have successfully completed my master’s in computer science course,
                                                  where I learned the latest technologies and techniques in the field. I gained valuable skills
                                                   and knowledge that will help me advance my career and pursue my interests</p>
@@ -189,9 +189,9 @@
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
-                                                <i class="fa fa-calendar"></i>2016 -2018
+                                                <i class="fa fa-calendar"></i>2021 -2025
                                             </h3>
-                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                            <h4 class="timeline-title">B.tech in Computer Science</h4>
                                             <p class="timeline-text">I have successfully completed my master’s in computer science course,
                                                  where I learned the latest technologies and techniques in the field. I gained valuable skills
                                                   and knowledge that will help me advance my career and pursue my interests</p>
