--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <img src="webpic\dp_2.jpg" alt="" width="150px">
                 <h1>S Yadav</h1>
                 <div class="social-icon">
-                    <a href="https://www.facebook.com/sanjayjadav.sanjayjadav.509"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/krishnavanshi__sanjay__/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/krishnavanshisanjay?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/krishnavanshi__sanjay__/><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/Sanjaykryadav"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/sanjay-kumar-yadav-4a3a31261/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
          </div>
@@ -45,7 +45,7 @@
             </ul>
 
             <div class=" foter">
-                <p> Copyright 2023 by S Yadav | <br>All Rights Reserved</p>
+                <p> Copyright 2024 by S Yadav | <br>All Rights Reserved</p>
             </div>
         <!--==Aside End==-->
        </div>
@@ -61,7 +61,7 @@
                     <p>I'm a fresh CSE student with a passion for programming,
                          as well as frontend development. I'm eager to apply my quick thinking and 
                          problem-solving skills as I embark on my journey in the tech world.</p>
-                    <a href="#" class="btn hire-me">Downlod CV</a>
+                    <a href="https://drive.google.com/file/d/1Oa__Sh4WvCaQGVtQ7pzRxx-cBDQiRyOT/view?usp=sharing" class="btn hire-me">Downlod CV</a>
                 </div>
                 <div class="home-img ">
                     <img src="webpic\profileweb1.png" alt="">
@@ -136,14 +136,14 @@
                                     </div>
                                     
                                     <div class="skill-item padd-15">
-                                        <h5>Python</h5>
+                                        <h5>Python/JAVA</h5>
                                         <div class="progress">
                                            <div class="progress-in" style="width: 80%;"></div>
                                            <div class="skill-percent">80%</div> 
                                         </div>
                                     </div>
                                     <div class="skill-item padd-15">
-                                        <h5>JS</h5>
+                                        <h5>JS/React</h5>
                                         <div class="progress">
                                            <div class="progress-in" style="width: 60%;"></div>
                                            <div class="skill-percent">60%</div> 
@@ -169,23 +169,31 @@
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
-                                                <i class="fa fa-calendar"></i>2016 -2018
+                                                <i class="fa fa-calendar"></i>2021 -2025
                                             </h3>
-                                            <h4 class="timeline-title">Board of 9th-10th </h4>
-                                            <p class="timeline-text">I have successfully completed my master’s in computer science course,
-                                                 where I learned the latest technologies and techniques in the field. I gained valuable skills
-                                                  and knowledge that will help me advance my career and pursue my interests</p>
+                                            <h4 class="timeline-title">B.Tech in CSE</h4>
+                                            <p class="timeline-text">I'm currently pursuing a <b>B.Tech</b> in Computer Science and Engineering at <b>JIS College of Engineering</b>.
+                                                I'm gaining valuable skills and knowledge in the latest technologies and techniques in the field of computer science. 
+                                                My technical skills and enthusiasm for the field drive me to continuously improve and take on new challenges.</p>
+
+
+
+
+
+
+</p>
                                            </div>
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
-                                                <i class="fa fa-calendar"></i>2019 -2021
+                                                <i class="fa fa-calendar"></i>2019-2021
                                             </h3>
-                                            <h4 class="timeline-title">Board of 11th-12th </h4>
-                                            <p class="timeline-text">I have successfully completed my master’s in computer science course,
-                                                 where I learned the latest technologies and techniques in the field. I gained valuable skills
+                                            <h4 class="timeline-title">Senior Secondary school (11th-12th) </h4>
+                                            <p class="timeline-text">I have successfully completed my <b>Senior Secondary school</b> in Science Subject at <b>R.B.JALAN INTER COLLEGE</b>,
+                                                 where I gained valuable skills
                                                   and knowledge that will help me advance my career and pursue my interests</p>
                                            </div>
+                                            <!--
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
@@ -196,6 +204,7 @@
                                                  where I learned the latest technologies and techniques in the field. I gained valuable skills
                                                   and knowledge that will help me advance my career and pursue my interests</p>
                                            </div>
+                                            -->
                                         </div>
                                     </div>
                                 </div>
@@ -209,13 +218,16 @@
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
-                                                <i class="fa fa-calendar"></i>2016 -2018
+                                                <i class="fa fa-calendar"></i>Lookout for Opportunities / Fresher
                                             </h3>
-                                            <h4 class="timeline-title">Master in Computer Science</h4>
-                                            <p class="timeline-text">I have successfully completed my master’s in computer science course,
-                                                 where I learned the latest technologies and techniques in the field. I gained valuable skills
-                                                  and knowledge that will help me advance my career and pursue my interests</p>
+                                            <h4 class="timeline-title">Graduate in Computer Science</h4>
+                                            <p class="timeline-text">I’m a recent graduate eager to start my career and make a meaningful impact. Throughout my studies,
+                                                I’ve gained practical skills and hands-on experience by working on various projects, all of which are deployed on <b>GitHub</b>.
+                                                These projects showcase my ability to tackle real-world problems and apply the latest technologies. 
+                                                I’m passionate about bringing fresh perspectives to your team and am committed to continuous learning and professional growth.
+                                                I would greatly appreciate the opportunity to prove myself and gain valuable experience with your organization.</p>
                                            </div>
+                                            <!--
                                            <div class="timeline-item">
                                             <div class="circle-dot"></div>
                                             <h3 class="timeline-date">
@@ -236,6 +248,7 @@
                                                  where I learned the latest technologies and techniques in the field. I gained valuable skills
                                                   and knowledge that will help me advance my career and pursue my interests</p>
                                            </div>
+                                            -->
                                         </div>
                                     </div>
                                 </div>
