--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>S Yadav</h1>
                 <div class="social-icon">
                     <a href="https://www.facebook.com/krishnavanshisanjay?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/krishnavanshi__sanjay__/><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/krishnavanshi__sanjay__/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/Sanjaykryadav"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/sanjay-kumar-yadav-4a3a31261/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
@@ -61,7 +61,7 @@
                     <p>I'm a fresh CSE student with a passion for programming,
                          as well as frontend development. I'm eager to apply my quick thinking and 
                          problem-solving skills as I embark on my journey in the tech world.</p>
-                    <a href="https://drive.google.com/file/d/1Oa__Sh4WvCaQGVtQ7pzRxx-cBDQiRyOT/view?usp=sharing" class="btn hire-me">Downlod CV</a>
+                    <a href="https://drive.google.com/file/d/1Oa__Sh4WvCaQGVtQ7pzRxx-cBDQiRyOT/view?usp=sharing" class="btn hire-me" target="_blank" >Downlod CV</a>
                 </div>
                 <div class="home-img ">
                     <img src="webpic\profileweb1.png" alt="">
